--- a/index.html
+++ b/index.html
@@ -31,8 +31,11 @@
                                 <li><a href="#The most practiced">The most practiced
                                 </a></li>
                                 <li><a href="#SUPPORT">SUPPORT</a></li>
-                                <button>sign up</button>
+                                <div class="btn">
+                                <button>log in</button>
                                 <button class="two">sign up</button>
+
+                                </div>
                         </ul>
                     </nav>
                 </header>
@@ -60,11 +63,13 @@
                 </div>
 
                 <div  class="text-two">
+                    <div class="containar">
                         <div class="big-text">
-                            <h2>This society does not aspire to reality, but to the reality of <span> predation </span> itself</h2>
-                            <p>But you must stay</p>
+                       <p>This society does not aspire to reality as it truly is, but rather to a distorted version of it, rooted in the principles of predation and dominance. It glorifies power, control, and exploitation, masking them as progress while neglecting empathy, cooperation, and balance. In its pursuit of survival through conquest, it forgets that true strength lies in unity, not in the destruction of others. Such a vision of reality leads to a cycle of endless conflict, stripping humanity of its deeper purpose.</p>
+                    </div>
                         </div>
-                        <img src="bac2.jpg" alt="">
+                        </div>
+                        
                         
                 </div>
                 <div class="stay">
@@ -203,21 +208,15 @@
                                             <div class="containar">
                                             <h3>The fourth game</h3>
                                             <div class="prog">
-                                                <span style="width:65%;" data-one="65%"></span>
+                                                <span style="width:75%;" data-one="75%"></span>
                                             </div>
                                         </div>
                                         </div>
                                         <div id="SUPPORT" class="footer">
                                             <div class="back-footer">
                                                 <h1>email for support</h1>
-                                                <p>random.com</p>
+                                                <p>random.gamil.com</p>
                                                 <i class="fa-solid fa-headset"></i>
-                                            </div>
-                                            <div class="back-footer">
-                                                <h1>rate</h1>
-                                                <i class="fa-regular fa-star"></i>
-                                                <i class="fa-regular fa-star"></i>
-                                                <i class="fa-regular fa-star"></i>
                                             </div>
                                             <div class="back-footer">
                                                 <h1>To follow us</h1>
